--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -16,6 +16,9 @@
         <!-- apache包-->
         <commons.lang3.version>3.9</commons.lang3.version>
         <commons.text.version>1.8</commons.text.version>
+        <commons.collection4.versioon>4.4</commons.collection4.versioon>
+        <commons-configuration.version>1.10</commons-configuration.version>
+
         <!-- json包-->
         <fastjson.version>1.2.62</fastjson.version>
         <jack.jsr310.version>2.9.10</jack.jsr310.version>
@@ -52,16 +55,26 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <java.version>1.8</java.version>
         <disruptor.version>3.4.2</disruptor.version>
         <jwt.auth0.version>3.8.3</jwt.auth0.version>
         <rxjava.version>3.0.0-RC6</rxjava.version>
         <easyexcel.version>2.1.3</easyexcel.version>
+        <jetcache.version>2.5.15</jetcache.version>
     </properties>
 
     <dependencyManagement>
 
         <dependencies>
+            <dependency>
+                <groupId>commons-configuration</groupId>
+                <artifactId>commons-configuration</artifactId>
+                <version>${commons-configuration.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -207,11 +220,20 @@
                 <artifactId>rxjava</artifactId>
                 <version>${rxjava.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons.collection4.versioon}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alicp.jetcache</groupId>
+                <artifactId>jetcache-starter-redis-lettuce</artifactId>
+                <version>${jetcache.version}</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
     <dependencies>
-
     </dependencies>
 
 
@@ -291,53 +313,53 @@
         </repository>
     </distributionManagement>
 
-<!--    <repositories>-->
+    <repositories>
 
-<!--        <repository>-->
-<!--            <id>aliyun-public</id>-->
-<!--            <name>aliyun-public</name>-->
-<!--            <url>https://maven.aliyun.com/repository/public</url>-->
-<!--            <snapshots>-->
-<!--                <enabled>false</enabled>-->
-<!--            </snapshots>-->
-<!--        </repository>-->
+        <repository>
+            <id>aliyun-public</id>
+            <name>aliyun-public</name>
+            <url>https://maven.aliyun.com/repository/public</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
 
-<!--        <repository>-->
-<!--            <id>apache-snapshots</id>-->
-<!--            <name>apache-snapshots</name>-->
-<!--            <url>https://maven.aliyun.com/repository/apache-snapshots</url>-->
-<!--            <snapshots>-->
-<!--                <enabled>true</enabled>-->
-<!--                <updatePolicy>always</updatePolicy>-->
-<!--            </snapshots>-->
-<!--            <releases>-->
-<!--                <enabled>false</enabled>-->
-<!--            </releases>-->
-<!--        </repository>-->
+        <repository>
+            <id>apache-snapshots</id>
+            <name>apache-snapshots</name>
+            <url>https://maven.aliyun.com/repository/apache-snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
 
-<!--        <repository>-->
-<!--            <id>aliyun-snapshots</id>-->
-<!--            <name>aliyun-snapshots</name>-->
-<!--            <url>https://maven.aliyun.com/repository/snapshots</url>-->
-<!--            <snapshots>-->
-<!--                <enabled>true</enabled>-->
-<!--                <updatePolicy>always</updatePolicy>-->
-<!--            </snapshots>-->
-<!--            <releases>-->
-<!--                <enabled>false</enabled>-->
-<!--            </releases>-->
-<!--        </repository>-->
+        <repository>
+            <id>aliyun-snapshots</id>
+            <name>aliyun-snapshots</name>
+            <url>https://maven.aliyun.com/repository/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
 
 
-<!--        <repository>-->
-<!--            <id>aliyun-spring</id>-->
-<!--            <name>aliyun-spring</name>-->
-<!--            <url>https://maven.aliyun.com/repository/spring</url>-->
-<!--            <snapshots>-->
-<!--                <enabled>false</enabled>-->
-<!--            </snapshots>-->
-<!--        </repository>-->
-<!--    </repositories>-->
+        <repository>
+            <id>aliyun-spring</id>
+            <name>aliyun-spring</name>
+            <url>https://maven.aliyun.com/repository/spring</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <licenses>
         <license>
