--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,8 @@
         <rxjava.version>3.0.0-RC6</rxjava.version>
         <easyexcel.version>2.1.3</easyexcel.version>
         <jetcache.version>2.5.15</jetcache.version>
+        <poi.version>3.17</poi.version>
+        <xerces.version>2.11.0</xerces.version>
     </properties>
 
     <dependencyManagement>
@@ -143,6 +145,26 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>easyexcel</artifactId>
                 <version>${easyexcel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>xerces</groupId>
+                <artifactId>xercesImpl</artifactId>
+                <version>${xerces.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml-schemas</artifactId>
+                <version>${poi.version}</version>
             </dependency>
 
             <!--jackjson处理java8时间格式化-->
