--- a/pom.xml
+++ b/pom.xml
@@ -67,11 +67,17 @@
         <jetcache.version>2.5.15</jetcache.version>
         <poi.version>3.17</poi.version>
         <xerces.version>2.11.0</xerces.version>
+        <jwt.version>0.9.1</jwt.version>
     </properties>
 
     <dependencyManagement>
 
         <dependencies>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jwt.version}</version>
+            </dependency>
             <dependency>
                 <groupId>commons-configuration</groupId>
                 <artifactId>commons-configuration</artifactId>
