--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.3</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -28,7 +28,7 @@
         <validation-api.version>2.0.1.Final</validation-api.version>
 
         <!-- 工具包-->
-        <hutool.version>5.0.7</hutool.version>
+        <hutool.version>5.1.0</hutool.version>
         <google.guava.version>28.1-jre</google.guava.version>
         <orika.version>1.5.4</orika.version>
         <okio.version>2.4.1</okio.version>
@@ -63,20 +63,33 @@
         <disruptor.version>3.4.2</disruptor.version>
         <jwt.auth0.version>3.8.3</jwt.auth0.version>
         <rxjava.version>3.0.0-RC6</rxjava.version>
-        <easyexcel.version>2.1.3</easyexcel.version>
+        <easyexcel.version>2.1.4</easyexcel.version>
         <jetcache.version>2.5.15</jetcache.version>
         <poi.version>3.17</poi.version>
         <xerces.version>2.11.0</xerces.version>
-        <jwt.version>0.9.1</jwt.version>
+        <jjwt.version>0.9.1</jjwt.version>
+        <inject.version>1</inject.version>
+        <zxing.version>3.4.0</zxing.version>
     </properties>
 
     <dependencyManagement>
 
         <dependencies>
+
+            <dependency>
+                <groupId>com.google.zxing</groupId>
+                <artifactId>core</artifactId>
+                <version>${zxing.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.zxing</groupId>
+                <artifactId>javase</artifactId>
+                <version>${zxing.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
-                <version>${jwt.version}</version>
+                <version>${jjwt.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-configuration</groupId>
@@ -122,6 +135,11 @@
                 <version>${google.guava.version}</version>
             </dependency>
             <!--第三方工具-->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-core</artifactId>
@@ -209,6 +227,12 @@
                 <version>${shiro.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-spring-boot-web-starter</artifactId>
+                <version>${shiro.version}</version>
+            </dependency>
+
             <!-- beetl -->
             <dependency>
                 <groupId>com.ibeetl</groupId>
@@ -241,7 +265,7 @@
             <dependency>
                 <groupId>javax.inject</groupId>
                 <artifactId>javax.inject</artifactId>
-                <version>1</version>
+                <version>${inject.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.reactivex.rxjava3</groupId>
