--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.0.6</version>
+    <version>1.0.7</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -24,14 +24,14 @@
         <commons-collection4.version>4.4</commons-collection4.version>
         <commons-configuration.version>1.10</commons-configuration.version>
         <!-- json包-->
-        <fastjson.version>1.2.62</fastjson.version>
+        <fastjson.version>1.2.63</fastjson.version>
         <!-- 工具包-->
-        <hutool.version>5.1.0</hutool.version>
-        <google.guava.version>28.1-jre</google.guava.version>
+        <hutool.version>5.1.2</hutool.version>
+        <google.guava.version>28.2-jre</google.guava.version>
         <orika.version>1.5.4</orika.version>
-        <okio.version>2.4.1</okio.version>
+        <okio.version>2.4.3</okio.version>
         <!-- mybatis-plus-->
-        <mybatis.plus.version>3.3.0</mybatis.plus.version>
+        <mybatis.plus.version>3.3.1</mybatis.plus.version>
         <!--pojo转换-->
         <mapstruct.version>1.3.1.Final</mapstruct.version>
         <!-- dubbo-->
@@ -40,7 +40,7 @@
         <swagger2.version>2.9.2</swagger2.version>
         <swagger-ui-layer.version>1.1.3</swagger-ui-layer.version>
         <!-- 权限校验-->
-        <shiro.version>1.4.2</shiro.version>
+        <shiro.version>1.5.0</shiro.version>
         <!-- 模板引擎-->
         <beetl.starter.version>1.2.20.RELEASE</beetl.starter.version>
         <!--验证码工具-->
@@ -51,17 +51,19 @@
         <jwt.auth0.version>3.8.3</jwt.auth0.version>
         <jjwt.version>0.9.1</jjwt.version>
         <!--事件编程-->
-        <rxjava3.version>3.0.0-RC7</rxjava3.version>
+        <rxjava3.version>3.0.0-RC9</rxjava3.version>
         <!--excel读写-->
         <easyexcel.version>2.1.6</easyexcel.version>
         <poi.version>3.17</poi.version>
-        <xerces.version>2.11.0</xerces.version>
+<!--        <poi.version>4.1.1</poi.version>-->
+        <xerces.version>2.11.2</xerces.version>
         <!--多级缓存-->
         <jetcache.version>2.5.16</jetcache.version>
         <inject.version>1</inject.version>
         <!--二维码-->
         <zxing.version>3.4.0</zxing.version>
-
+        <!--工作流-->
+        <flowable.version>6.5.0</flowable.version>
         <!--spring-parent已包含的-->
 
      <!--
@@ -100,6 +102,11 @@
     <dependencyManagement>
 
         <dependencies>
+            <dependency>
+                <groupId>org.flowable</groupId>
+                <artifactId>flowable-spring-boot-starter</artifactId>
+                <version>${flowable.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.zxing</groupId>
                 <artifactId>core</artifactId>
