--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.0.7</version>
+    <version>1.0.8</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -26,7 +26,7 @@
         <!-- json包-->
         <fastjson.version>1.2.63</fastjson.version>
         <!-- 工具包-->
-        <hutool.version>5.1.2</hutool.version>
+        <hutool.version>5.1.3</hutool.version>
         <google.guava.version>28.2-jre</google.guava.version>
         <orika.version>1.5.4</orika.version>
         <okio.version>2.4.3</okio.version>
@@ -42,7 +42,7 @@
         <!-- 权限校验-->
         <shiro.version>1.5.0</shiro.version>
         <!-- 模板引擎-->
-        <beetl.starter.version>1.2.20.RELEASE</beetl.starter.version>
+        <beetl.starter.version>1.2.22.RELEASE</beetl.starter.version>
         <!--验证码工具-->
         <easycaptcha.version>1.6.2</easycaptcha.version>
         <!--高性能队列-->
@@ -51,7 +51,7 @@
         <jwt.auth0.version>3.8.3</jwt.auth0.version>
         <jjwt.version>0.9.1</jjwt.version>
         <!--事件编程-->
-        <rxjava3.version>3.0.0-RC9</rxjava3.version>
+        <rxjava3.version>3.0.0</rxjava3.version>
         <!--excel读写-->
         <easyexcel.version>2.1.6</easyexcel.version>
         <poi.version>3.17</poi.version>
