--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.0.10</version>
+    <version>1.1.0</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -24,9 +24,9 @@
         <commons-collection4.version>4.4</commons-collection4.version>
         <commons-configuration.version>1.10</commons-configuration.version>
         <!-- json包-->
-        <fastjson.version>1.2.66</fastjson.version>
+        <fastjson.version>1.2.67</fastjson.version>
         <!-- 工具包-->
-        <hutool.version>5.2.1</hutool.version>
+        <hutool.version>5.2.4</hutool.version>
         <google.guava.version>28.2-jre</google.guava.version>
         <orika.version>1.5.4</orika.version>
         <okio.version>2.4.3</okio.version>
@@ -34,15 +34,12 @@
         <mybatis.plus.version>3.3.1</mybatis.plus.version>
         <!--pojo转换-->
         <mapstruct.version>1.3.1.Final</mapstruct.version>
-        <!-- dubbo-->
-        <!-- <dubbo.starter.version>2.7.4.1</dubbo.starter.version>-->
         <!-- API文档工具-->
-        <swagger2.version>2.9.2</swagger2.version>
-        <swagger-ui-layer.version>1.1.3</swagger-ui-layer.version>
+        <knife4j.version>2.0.2</knife4j.version>
         <!-- 权限校验-->
-        <shiro.version>1.5.1</shiro.version>
+        <shiro.version>1.5.2</shiro.version>
         <!-- 模板引擎-->
-        <beetl.starter.version>1.2.23.RELEASE</beetl.starter.version>
+        <beetl.starter.version>1.2.24.RELEASE</beetl.starter.version>
         <!--验证码工具-->
         <easycaptcha.version>1.6.2</easycaptcha.version>
         <!--高性能队列-->
@@ -51,57 +48,83 @@
         <jwt.auth0.version>3.8.3</jwt.auth0.version>
         <jjwt.version>0.9.1</jjwt.version>
         <!--事件编程-->
-        <rxjava3.version>3.0.0</rxjava3.version>
+        <rxjava3.version>3.0.1</rxjava3.version>
         <!--excel读写-->
-        <easyexcel.version>2.1.6</easyexcel.version>
+        <easyexcel.version>2.2.0-beta2</easyexcel.version>
         <poi.version>4.1.2</poi.version>
-<!--        <poi.version>4.1.1</poi.version>-->
+        <!--        <poi.version>3.1.7</poi.version>-->
         <xerces.version>2.11.2</xerces.version>
         <!--多级缓存-->
-        <jetcache.version>2.5.16</jetcache.version>
+        <jetcache.version>2.6.0.RC</jetcache.version>
         <inject.version>1</inject.version>
         <!--二维码-->
         <zxing.version>3.4.0</zxing.version>
         <!--工作流-->
         <flowable.version>6.5.0</flowable.version>
-        <!--spring-parent已包含的-->
+        <!--规则引擎-->
+        <drools.version>7.34.0.Final</drools.version>
+        <!--数据库线程池-->
+        <druid.version>1.1.21</druid.version>
+        <!--分表分库-->
+        <sharding-jdbc.version>4.0.1</sharding-jdbc.version>
 
-     <!--
-        <caffeine.version>2.8.0</caffeine.version>
-        <commons-codec.version>1.13</commons-codec.version>
-        <commons-lang3.version>3.9</commons-lang3.version>
-        <commons-pool2.version>2.7.0</commons-pool2.version>
-        <elasticsearch.version>7.5.1</elasticsearch.version>
-        <flyway.version>6.0.8</flyway.version>
-        <freemarker.version>2.3.29</freemarker.version>
-        <gson.version>2.8.6</gson.version>
-        <h2.version>1.4.200</h2.version>
-        <hibernate-validator.version>6.0.18.Final</hibernate-validator.version>
-        <htmlunit.version>2.36.0</htmlunit.version>
-        <httpasyncclient.version>4.1.4</httpasyncclient.version>
-        <httpclient.version>4.5.10</httpclient.version>
-        <httpcore.version>4.4.12</httpcore.version>
-        <jackson.version>2.10.1</jackson.version>
-        <jackson-bom.version>${jackson.version}</jackson-bom.version>
-        <javax-validation.version>2.0.1.Final</javax-validation.version>
-        <jedis.version>3.1.0</jedis.version>
-        <kafka.version>2.3.1</kafka.version>
-        <log4j2.version>2.12.1</log4j2.version>
-        <lombok.version>1.18.10</lombok.version>
-        <mssql-jdbc.version>7.4.1.jre8</mssql-jdbc.version>
-        <mysql.version>8.0.18</mysql.version>
-        <netty.version>4.1.43.Final</netty.version>
-        <ojdbc.version>19.3.0.0</ojdbc.version>
-        <okhttp3.version>3.14.4</okhttp3.version>
-        <postgresql.version>42.2.9</postgresql.version>
-        <rxjava2.version>2.2.16</rxjava2.version>
-      -->
+        <!--spring-parent已包含的-->
+        <!--
+           <caffeine.version>2.8.0</caffeine.version>
+           <commons-codec.version>1.13</commons-codec.version>
+           <commons-lang3.version>3.9</commons-lang3.version>
+           <commons-pool2.version>2.7.0</commons-pool2.version>
+           <elasticsearch.version>7.5.1</elasticsearch.version>
+           <flyway.version>6.0.8</flyway.version>
+           <freemarker.version>2.3.29</freemarker.version>
+           <gson.version>2.8.6</gson.version>
+           <h2.version>1.4.200</h2.version>
+           <hibernate-validator.version>6.0.18.Final</hibernate-validator.version>
+           <htmlunit.version>2.36.0</htmlunit.version>
+           <httpasyncclient.version>4.1.4</httpasyncclient.version>
+           <httpclient.version>4.5.10</httpclient.version>
+           <httpcore.version>4.4.12</httpcore.version>
+           <jackson.version>2.10.1</jackson.version>
+           <jackson-bom.version>${jackson.version}</jackson-bom.version>
+           <javax-validation.version>2.0.1.Final</javax-validation.version>
+           <jedis.version>3.1.0</jedis.version>
+           <kafka.version>2.3.1</kafka.version>
+           <log4j2.version>2.12.1</log4j2.version>
+           <lombok.version>1.18.10</lombok.version>
+           <mssql-jdbc.version>7.4.1.jre8</mssql-jdbc.version>
+           <mysql.version>8.0.18</mysql.version>
+           <netty.version>4.1.43.Final</netty.version>
+           <ojdbc.version>19.3.0.0</ojdbc.version>
+           <okhttp3.version>3.14.4</okhttp3.version>
+           <postgresql.version>42.2.9</postgresql.version>
+           <rxjava2.version>2.2.16</rxjava2.version>
+         -->
 
     </properties>
 
     <dependencyManagement>
 
         <dependencies>
+            <dependency>
+                <groupId>org.apache.shardingsphere</groupId>
+                <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+                <version>${sharding-jdbc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.flowable</groupId>
                 <artifactId>flowable-spring-boot-starter</artifactId>
@@ -243,18 +266,6 @@
                 <artifactId>easy-captcha</artifactId>
                 <version>${easycaptcha.version}</version>
             </dependency>
-
-            <dependency>
-                <groupId>com.github.caspar-chen</groupId>
-                <artifactId>swagger-ui-layer</artifactId>
-                <version>${swagger-ui-layer.version}</version>
-            </dependency>
-            <!-- dubbo -->
-<!--            <dependency>-->
-<!--                <groupId>org.apache.dubbo</groupId>-->
-<!--                <artifactId>dubbo-spring-boot-starter</artifactId>-->
-<!--                <version>${dubbo.starter.version}</version>-->
-<!--            </dependency>-->
             <dependency>
                 <groupId>com.lmax</groupId>
                 <artifactId>disruptor</artifactId>
@@ -279,6 +290,33 @@
                 <groupId>com.alicp.jetcache</groupId>
                 <artifactId>jetcache-starter-redis-lettuce</artifactId>
                 <version>${jetcache.version}</version>
+            </dependency>
+
+            <!--drools规则引擎-->
+            <dependency>
+                <groupId>org.drools</groupId>
+                <artifactId>drools-core</artifactId>
+                <version>${drools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.drools</groupId>
+                <artifactId>drools-compiler</artifactId>
+                <version>${drools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.drools</groupId>
+                <artifactId>drools-templates</artifactId>
+                <version>${drools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.kie</groupId>
+                <artifactId>kie-api</artifactId>
+                <version>${drools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.kie</groupId>
+                <artifactId>kie-spring</artifactId>
+                <version>${drools.version}</version>
             </dependency>
 
 
