--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.1.3</version>
+    <version>1.2.0</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -26,7 +26,7 @@
         <!-- json包-->
         <fastjson.version>1.2.68</fastjson.version>
         <!-- 工具包-->
-        <hutool.version>5.3.2</hutool.version>
+        <hutool.version>5.3.3</hutool.version>
         <google.guava.version>29.0-jre</google.guava.version>
         <orika.version>1.5.4</orika.version>
         <okio.version>2.4.3</okio.version>
@@ -37,7 +37,7 @@
         <!-- API文档工具-->
         <knife4j.version>2.0.2</knife4j.version>
         <!-- 权限校验-->
-        <shiro.version>1.5.2</shiro.version>
+        <shiro.version>1.5.3</shiro.version>
         <!-- 模板引擎-->
         <beetl.starter.version>1.2.29.RELEASE</beetl.starter.version>
         <!--验证码工具-->
@@ -113,6 +113,11 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
             </dependency>
             <dependency>
