--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -26,7 +26,7 @@
         <!-- json包-->
         <fastjson.version>1.2.68</fastjson.version>
         <!-- 工具包-->
-        <hutool.version>5.3.3</hutool.version>
+        <hutool.version>5.3.5</hutool.version>
         <google.guava.version>29.0-jre</google.guava.version>
         <orika.version>1.5.4</orika.version>
         <okio.version>2.4.3</okio.version>
@@ -39,14 +39,14 @@
         <!-- 权限校验-->
         <shiro.version>1.5.3</shiro.version>
         <!-- 模板引擎-->
-        <beetl.starter.version>1.2.29.RELEASE</beetl.starter.version>
+        <beetl.starter.version>1.2.30.RELEASE</beetl.starter.version>
         <!--验证码工具-->
         <easycaptcha.version>1.6.2</easycaptcha.version>
         <!--高性能队列-->
         <disruptor.version>3.4.2</disruptor.version>
         <!--jwt-->
-        <jwt.auth0.version>3.9.0</jwt.auth0.version>
-        <jjwt.version>0.9.1</jjwt.version>
+        <jwt.auth0.version>3.10.3</jwt.auth0.version>
+        <jjwt.version>0.11.1</jjwt.version>
         <!--事件编程-->
         <rxjava3.version>3.0.3</rxjava3.version>
         <!--excel读写-->
@@ -62,11 +62,13 @@
         <!--工作流-->
         <flowable.version>6.5.0</flowable.version>
         <!--规则引擎-->
-        <drools.version>7.36.1.Final</drools.version>
+        <drools.version>7.37.0.Final</drools.version>
         <!--数据库线程池-->
         <druid.version>1.1.22</druid.version>
         <!--分表分库-->
         <sharding-jdbc.version>4.1.0</sharding-jdbc.version>
+
+        <gson.version>2.8.6</gson.version>
 
         <!--spring-parent已包含的-->
         <!--
@@ -149,6 +151,34 @@
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
                 <version>${jjwt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>${jjwt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${jjwt.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${jjwt.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-gson</artifactId>
+                <version>${jjwt.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-configuration</groupId>
