--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.3.0</version>
+    <version>1.4.0</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -22,7 +22,7 @@
         <!-- apache包-->
         <commons-text.version>1.8</commons-text.version>
         <commons-collection4.version>4.4</commons-collection4.version>
-        <commons-configuration.version>1.10</commons-configuration.version>
+        <commons-configuration2.version>2.7</commons-configuration2.version>
         <!-- json包-->
         <fastjson.version>1.2.68</fastjson.version>
         <!-- 工具包-->
@@ -31,11 +31,11 @@
         <orika.version>1.5.4</orika.version>
         <okio.version>2.4.3</okio.version>
         <!-- mybatis-plus-->
-        <mybatis.plus.version>3.3.1.tmp</mybatis.plus.version>
+        <mybatis.plus.version>3.3.2</mybatis.plus.version>
         <!--pojo转换-->
         <mapstruct.version>1.3.1.Final</mapstruct.version>
         <!-- API文档工具-->
-        <knife4j.version>2.0.2</knife4j.version>
+        <knife4j.version>2.0.3</knife4j.version>
         <!-- 权限校验-->
         <shiro.version>1.5.3</shiro.version>
         <!-- 模板引擎-->
@@ -48,7 +48,7 @@
         <jwt.auth0.version>3.10.3</jwt.auth0.version>
         <jjwt.version>0.11.1</jjwt.version>
         <!--事件编程-->
-        <rxjava3.version>3.0.3</rxjava3.version>
+        <rxjava3.version>3.0.4</rxjava3.version>
         <!--excel读写-->
         <easyexcel.version>2.2.3</easyexcel.version>
         <poi.version>4.1.2</poi.version>
@@ -69,6 +69,8 @@
         <sharding-jdbc.version>4.1.0</sharding-jdbc.version>
 
         <gson.version>2.8.6</gson.version>
+        <!--知识图谱-->
+        <neo4j.version>4.0.4</neo4j.version>
 
         <!--spring-parent已包含的-->
         <!--
@@ -181,9 +183,9 @@
                 <version>${gson.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-configuration</groupId>
-                <artifactId>commons-configuration</artifactId>
-                <version>${commons-configuration.version}</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-configuration2</artifactId>
+                <version>${commons-configuration2.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -353,6 +355,14 @@
                 <artifactId>kie-spring</artifactId>
                 <version>${drools.version}</version>
             </dependency>
+
+            <!--知识图谱-->
+            <dependency>
+                <groupId>org.neo4j.driver</groupId>
+                <artifactId>neo4j-java-driver</artifactId>
+                <version>${neo4j.version}</version>
+            </dependency>
+
 
 
             <!--spring-parent中已包含的-->
