--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.5.0</version>
+    <version>1.6.0</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -25,10 +25,11 @@
         <commons-configuration2.version>2.7</commons-configuration2.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
 
+
         <!-- json包-->
-        <fastjson.version>1.2.70</fastjson.version>
+        <fastjson.version>1.2.71</fastjson.version>
         <!-- 工具包-->
-        <hutool.version>5.3.6</hutool.version>
+        <hutool.version>5.3.7</hutool.version>
         <google.guava.version>29.0-jre</google.guava.version>
         <orika.version>1.5.4</orika.version>
         <okio.version>2.4.3</okio.version>
@@ -52,7 +53,7 @@
         <!--事件编程-->
         <rxjava3.version>3.0.4</rxjava3.version>
         <!--excel读写-->
-        <easyexcel.version>2.2.3</easyexcel.version>
+        <easyexcel.version>2.2.5</easyexcel.version>
 
         <easypoi.version>4.2.0</easypoi.version>
 
@@ -83,14 +84,15 @@
 
         <xxl-job.version>2.2.0</xxl-job.version>
 
-        <mybatis-spring-boot-starter.version>2.1.2</mybatis-spring-boot-starter.version>
+        <mybatis-spring-boot-starter.version>2.1.3</mybatis-spring-boot-starter.version>
 
-        <!--自定义springboot启动图案-->
-        <banner.version>1.0.2</banner.version>
         <!--获取浏览器信息-->
         <userAgent.version>1.21</userAgent.version>
         <!--fastdfs文件存储客户端-->
-        <fastdfs-clientfastdfs-client.version>1.26.7</fastdfs-clientfastdfs-client.version>
+        <fastdfs-clientfastdfs-client.version>1.27.2</fastdfs-clientfastdfs-client.version>
+
+        <pagehelper.spring.boot.version>1.2.13</pagehelper.spring.boot.version>
+
 
         <!--spring-parent已包含的-->
         <!--
@@ -442,15 +444,16 @@
             </dependency>
 
             <dependency>
-                <groupId>com.nepxion</groupId>
-                <artifactId>banner</artifactId>
-                <version>${banner.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>com.github.tobato</groupId>
                 <artifactId>fastdfs-client</artifactId>
                 <version>${fastdfs-client.version}</version>
+            </dependency>
+
+            <!--分页插件-->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper.spring.boot.version}</version>
             </dependency>
 
 
