--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.8.0</version>
+    <version>1.9.0</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -20,11 +20,13 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- apache包-->
-        <commons-text.version>1.8</commons-text.version>
+        <commons-text.version>1.9</commons-text.version>
         <commons-collection4.version>4.4</commons-collection4.version>
         <commons-configuration2.version>2.7</commons-configuration2.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <commons-codec.version>1.14</commons-codec.version>
+        <!--2.6支持JDK7,2.7支持JDK8-->
+        <commons-io.version>2.7</commons-io.version>
 
 
         <!-- json包-->
@@ -104,7 +106,7 @@
            <caffeine.version>2.8.0</caffeine.version>
            <commons-codec.version>1.13</commons-codec.version>
            <commons-lang3.version>3.9</commons-lang3.version>
-           <commons-pool2.version>2.7.0</commons-pool2.version>
+           <commons-pool2.version>2.8.1</commons-pool2.version>
            <elasticsearch.version>7.5.1</elasticsearch.version>
            <flyway.version>6.0.8</flyway.version>
            <freemarker.version>2.3.29</freemarker.version>
@@ -316,6 +318,12 @@
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
                 <version>${commons-codec.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
             </dependency>
 
 
