更新添加依赖版本 v1.12.0

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.lingcoder</groupId>
     <artifactId>basic-commons-dependencies</artifactId>
-    <version>1.11.0</version>
+    <version>1.12.0</version>
     <name>basic-commons-dependencies</name>
     <description>第三方通用依赖包</description>
     <packaging>pom</packaging>
@@ -30,20 +30,20 @@
 
 
         <!-- json包-->
-        <fastjson.version>1.2.74</fastjson.version>
+        <fastjson.version>1.2.75</fastjson.version>
         <!-- 工具包-->
-        <hutool.version>5.4.6</hutool.version>
+        <hutool.version>5.4.7</hutool.version>
         <google.guava.version>29.0-jre</google.guava.version>
         <orika.version>1.5.4</orika.version>
         <okio.version>2.4.3</okio.version>
         <!-- mybatis-plus-->
-        <mybatis.plus.version>3.4.0</mybatis.plus.version>
+        <mybatis.plus.version>3.4.1</mybatis.plus.version>
         <!--pojo转换-->
         <mapstruct.version>1.4.1.Final</mapstruct.version>
         <!-- API文档工具-->
-        <knife4j.version>2.0.6</knife4j.version>
+        <knife4j.version>2.0.7</knife4j.version>
         <!-- 权限校验-->
-        <shiro.version>1.6.0</shiro.version>
+        <shiro.version>1.7.0</shiro.version>
         <!-- 模板引擎-->
         <beetl.starter.version>1.2.35.RELEASE</beetl.starter.version>
         <!--验证码工具-->
@@ -94,13 +94,14 @@
         <!--fastdfs文件存储客户端-->
         <fastdfs-clientfastdfs-client.version>1.27.2</fastdfs-clientfastdfs-client.version>
 
-        <pagehelper.spring.boot.version>1.2.13</pagehelper.spring.boot.version>
+        <pagehelper.spring.boot.version>1.3.0</pagehelper.spring.boot.version>
         <justAuth.version>1.15.8</justAuth.version>
         <itext.version>7.1.12</itext.version>
         <html2pdf.version>3.0.0</html2pdf.version>
         <skywalking.version>8.1.0</skywalking.version>
         <logstash-logback-encoder.version>6.4</logstash-logback-encoder.version>
         <ip2region.version>1.7.2</ip2region.version>
+        <captcha.version>1.1.8</captcha.version>
 
 
         <!--spring-parent已包含的-->
@@ -551,6 +552,12 @@
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>${pagehelper.spring.boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.anji-plus</groupId>
+                <artifactId>captcha</artifactId>
+                <version>${captcha.version}</version>
             </dependency>
 
 
